--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -7,8 +7,12 @@
   background-color: #000000;
 }
 
-.newsletterForm {
-  background-color: violet;
+.flexRowContent--newsletterForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 146px;
+  background-color: #F2F2F2;
 }
 
 @media screen and (min-width: 40em) {
