--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -15,7 +15,13 @@
   color: #000000;
   font-size: 20px;
   font-weight: 900;
+}
+.headingLevel2--shelfTitle::after {
+  content: "";
+  width: 70px;
+  height: 4px;
   border-bottom: 4px solid #C0C0C0;
+  display: block;
 }
 
 .container--deals .paragraph {
@@ -27,14 +33,15 @@
 }
 
 .container--question {
+  background-color: #F2F2F2;
   justify-content: center;
+  height: 40px;
 }
 
 .container--question .paragraph {
   text-align: center;
   max-width: 540px;
-  margin: 0 16px;
-  padding-top: 50px;
+  padding-top: 15px;
   color: #333333;
 }
 
