--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -3,7 +3,7 @@
   padding: 0 0.5rem;
 }
 
-.flexRowContent--menu-row {
+.flexRow--menu-row {
   background-color: #000000;
 }
 
@@ -11,6 +11,14 @@
   display: flex;
   height: 100px;
   background-color: #F2F2F2;
+}
+
+.flexColChild--footerCopy {
+  display: flex;
+  justify-content: space-evenly;
+}
+.flexRowContent--copy {
+  margin-top: 50px;
 }
 
 @media screen and (min-width: 40em) {
