--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -57,6 +57,7 @@
   text-align: center;
   display: flex;
   margin-top: 25px;
+  cursor: pointer;
 }
 .wrapper--buttonFooter2 {
   background-color: #FFFFFF;
@@ -69,6 +70,7 @@
   text-align: center;
   display: flex;
   margin-top: 5px;
+  cursor: pointer;
 }
 .image--buttonFooter1 {
   margin-right: 14px;
@@ -111,7 +113,7 @@
 .container--question .paragraph {
   text-align: center;
   max-width: 540px;
-  padding-top: 15px;
+  padding-top: 5px;
   color: #333333;
 }
 
