--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -48,8 +48,18 @@
 
 .flexRowContent--main-header-mobile {
   align-items: center;
-  padding: 0.625rem 0.5rem;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
+  justify-content: space-around;
+}
+.flexRow--main-header-searchBar {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+}
+.flexRowContent--main-header-searchBar {
+  width: 290px;
 }
 
 .flexRowContent--menu-link :global(.vtex-menu-2-x-styledLink) {
