--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -89,6 +89,16 @@
   margin: 1rem 0;
 }
 
+@media only screen and (max-width: 425px) {
+  .searchBarInnerContainer :global(.vtex-input-prefix__group) {
+    background-color: #f0f0f0;
+  }
+  .autoCompleteOuterContainer {
+    background-color: #f0f0f0;
+    width: 290px;
+  }
+}
+
 @media only screen and (min-width: 640px) {
   .newsletter .container {
     padding: 140px;
