--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -50,13 +50,16 @@
   align-items: center;
   background-color: #ffffff;
   justify-content: space-around;
-  height: 55px;
+  height: 50px;
 }
 .flexRow--main-header-searchBar {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  height: 40px;
+  background: #ffffff;
+  position: absolute;
+  width: 100%;
+  height: 50px;
 }
 .flexRowContent--main-header-searchBar {
   width: 290px;
