--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -23,14 +23,15 @@
   border-bottom: 4px solid #C0C0C0;
   display: block;
 }
-.headingLevel2--shelfTitleMobile::after {
-  content: "";
-  width: 40px;
-  height: 4px;
-  border-bottom: 4px solid #C0C0C0;
-  display: block;
+@media screen and (max-width: 745px) {
+  .headingLevel2--shelfTitle::after {
+    content: "";
+    width: 40px;
+    height: 4px;
+    border-bottom: 4px solid #C0C0C0;
+    display: block;
+  }
 }
-
 .paragraph--localizacaoTitle {
   font-size: 20px;
   margin-top: 0;
