--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -29,6 +29,15 @@
     padding-bottom: 10px;
     background-color: #F2F2F2;
   }
+  .flexRow--copy {
+    display: flex;
+  }
+  .flexRowContent--copy {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px !important;
+  }
 }
 .flexColChild--footerCopy {
   display: flex;
